kubernetes/apps/infrastructure/crunchy-postgres-operator/cluster/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "egress-to-postgres-main"
spec:
  description: "Allow pods to egress to main postgres cluster, no port restrictions"
  endpointSelector:
    matchLabels:
      egress.home.arpa/postgres-main: allow
  egress:
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres-16
            app.kubernetes.io/name: crunchy-postgres
            io.kubernetes.pod.namespace: infrastructure
